<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_min">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_delete"
        android:textSize="@dimen/textSize_medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        >
    </TextView>

    <TextView
        android:layout_marginTop="@dimen/padding_min"
        android:id="@+id/idTextNameMascotaDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_mascota"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_min"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/padding_min"
        >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idTextPassMascotaDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ingresar_pass"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_min"
        android:weightSum="1"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/idAlertCancelMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="@dimen/padding_min"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@android:color/holo_red_dark"
            android:textColor="@android:color/holo_red_dark"
            >
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/idAlertDeleteMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/accept"
            >
        </com.google.android.material.button.MaterialButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>