<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <io.github.florent37.shapeofview.shapes.ArcView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="4dp"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo_veterinario"
                android:scaleType="centerCrop"
                >
            </androidx.appcompat.widget.AppCompatImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </io.github.florent37.shapeofview.shapes.ArcView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/padding_min"
        android:layout_marginLeft="@dimen/padding_min"
        android:gravity="center_horizontal"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/person_outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="?actionBarSize"
            android:layout_marginBottom="@dimen/margin_bottom_min"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingresar_login"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/password_outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/margin_bottom_min"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ingresar_pass"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin_"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:paddingRight="@dimen/padding_min"
            android:paddingLeft="@dimen/padding_min"
            >
        </com.google.android.material.button.MaterialButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>